--- a/lib/temporary_hack_web/templates/page/index.html.heex
+++ b/lib/temporary_hack_web/templates/page/index.html.heex
@@ -19,22 +19,13 @@
     </ul>
   </article>
   <article class="column">
-    <h2>Help</h2>
+    <h2>Elsewhere</h2>
     <ul>
       <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
+        <a href="https://github.com/akasprzok">Github</a>
       </li>
       <li>
-        <a href="https://web.libera.chat/#elixir">#elixir on Libera Chat (IRC)</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-      <li>
-        <a href="https://discord.gg/elixir">Elixir on Discord</a>
+        <a href="https://twitter.com/akasprzok">Twitter</a>
       </li>
     </ul>
   </article>
