--- a/lib/temporary_hack_web/templates/project/form.html.heex
+++ b/lib/temporary_hack_web/templates/project/form.html.heex
@@ -9,6 +9,14 @@
   <%= text_input f, :github_repo %>
   <%= error_tag f, :github_repo %>
 
+  <%= label f, :hex %>
+  <%= checkbox f, :hex %>
+  <%= error_tag f, :hex %>
+
+  <%= label f, :hex_docs %>
+  <%= checkbox f, :hex_docs %>
+  <%= error_tag f, :hex_docs %>
+
   <div>
     <%= submit "Save" %>
   </div>
