--- a/lib/temporary_hack_web/templates/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/project/index.html.heex
@@ -4,6 +4,8 @@
   <thead>
     <tr>
       <th>Github repo</th>
+      <th>Hex</th>
+      <th>Hex Docs</th>
 
       <th></th>
     </tr>
@@ -12,6 +14,8 @@
 <%= for project <- @projects do %>
     <tr>
       <td><%= project.github_repo %></td>
+      <td><%= project.hex %></td>
+      <td><%= project.hex_docs %></td>
 
       <td>
         <span><%= link "Show", to: Routes.project_path(@conn, :show, project) %></span>
