--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,42 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 /* This file is for your main application CSS */
-@import "./phoenix.css";
+/* Headers */
+.header {
+  width: 100%;
+  background: #fdfdfd;
+  border-bottom: 1px solid #eaeaea;
+  margin-bottom: 2rem;
+}
+.header section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.header section :first-child {
+  order: 2;
+}
+.header section :last-child {
+  order: 1;
+}
+.header nav ul,
+.header nav li {
+  margin: 0;
+  padding: 0;
+  display: block;
+  text-align: right;
+  white-space: nowrap;
+}
+.header nav ul {
+  margin: 1rem;
+  margin-top: 0;
+}
+.header nav a {
+  display: block;
+}
 
 /* Alerts and form errors used by phx.new */
 .alert {
@@ -118,3 +155,4 @@
   0% { opacity: 1; }
   100% { opacity: 0; }
 }
+
