--- a/lib/temporary_hack_web/templates/layout/root.html.heex
+++ b/lib/temporary_hack_web/templates/layout/root.html.heex
@@ -11,17 +11,11 @@
   </head>
   <body>
     <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
-          </ul>
-          <%= render "_user_menu.html", assigns %>
-        </nav>
-      </section>
+      <nav class="flex items-center justify-between flex-wrap bg-blue-100">
+        <div class="flex items-center flex-shrink-0 text-white mr-6">
+          <span class="font-semibold text-xl tracking-tight">Temporary Hack</span>
+        </div>
+      </nav>
     </header>
     <%= @inner_content %>
   </body>
