--- a/lib/temporary_hack_web/templates/page/index.html.heex
+++ b/lib/temporary_hack_web/templates/page/index.html.heex
@@ -1,20 +1,12 @@
-<section class="row">
-  <article class="column">
-    <h2>Resources</h2>
-    <ul>
-      <li>
-        <a href="https://hexdocs.pm/phoenix/overview.html">Guides &amp; Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix/blob/v1.6/CHANGELOG.md">v1.6 Changelog</a>
-      </li>
-    </ul>
-  </article>
-  <article class="column">
-    <h2>Elsewhere</h2>
+<section class="flex flex-wrap mx-auto py-10 flex justify-center">
+  <div class="bg-blue-200 w-80 shadow-lg p-4 rounded-lg border border-gray-200 m-4">
+    <h2 class="text-2xl uppercase">Resources</h2>
+    <p>
+    A collection of personal projects with demos, links, and documentation.
+    </p>
+  </div>
+  <div class="bg-blue-200 w-80 shadow-lg p-4 rounded-lg border border-gray-200 m-4">
+    <h2 class="text-2xl uppercase">Elsewhere</h2>
     <ul>
       <li>
         <a href="https://github.com/akasprzok">Github</a>
@@ -23,5 +15,5 @@
         <a href="https://twitter.com/akasprzok">Twitter</a>
       </li>
     </ul>
-  </article>
+  </div>
 </section>
