--- a/lib/temporary_hack_web/templates/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/project/index.html.heex
@@ -1,25 +1,17 @@
 <h1>Listing Projects</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Github repo</th>
-      <th>Hex</th>
-      <th>Hex Docs</th>
-      <th>Language</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
 <%= for project <- @projects do %>
-    <tr>
-      <td><%= project.github_repo %></td>
-      <td><%= project.hex %></td>
-      <td><%= project.hex_docs %></td>
-      <%= if project.github_info do %>
-      <td><%= project.github_info["language"] %></td>
-      <% end %>
-    </tr>
+  <div class="max-w-sm rounded w-full shadow-lg">
+    <div class="font-bold text-xl mb-2"><%= link(project.repo, to: project.html_url)%></div>
+    <p class="text-gray-700 text-base"><%= project.description %></p>
+    <%= if Map.has_key?(project, :hex) do %>
+      <div class="font-semibold text-l mb-2">Hex</div>
+      <div class="px-6 pt-4 pb-2"><%= project.hex.latest_version %></div>
+      <img src="https://img.shields.io/hexpm/l/logfmt_ex" />
+    <% end %>
+    <div class="px-6 pt-4 pb-2">
+      <span class="inline-blockf bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=project.language%></span>
+      <span class="inline-blockf bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=project.license%></span>
+    </div>
+  </div>
 <% end %>
-  </tbody>
-</table>
