--- a/lib/temporary_hack_web/templates/admin/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/admin/project/index.html.heex
@@ -3,20 +3,16 @@
 <table>
   <thead>
     <tr>
-      <th>Github repo</th>
-      <th>Hex</th>
-      <th>Hex Docs</th>
-
+      <th>User</th>
+      <th>Repo</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
 <%= for project <- @projects do %>
     <tr>
-      <td><%= project.github_repo %></td>
-      <td><%= project.hex %></td>
-      <td><%= project.hex_docs %></td>
-
+      <td><%= project.user %></td>
+      <td><%= project.repo %></td>
       <td>
         <span><%= link "Show", to: Routes.project_path(@conn, :show, project) %></span>
         <span><%= link "Edit", to: Routes.project_path(@conn, :edit, project) %></span>
