--- a/lib/temporary_hack_web/templates/admin/project/show.html.heex
+++ b/lib/temporary_hack_web/templates/admin/project/show.html.heex
@@ -3,9 +3,14 @@
 <ul>
 
   <li>
-    <strong>Github repo:</strong>
-    <%= @project.github_repo %>
+    <strong>User:</strong>
+    <%= @project.user %>
   </li>
+  <li>
+    <strong>Repo:</strong>
+    <%= @project.repo %>
+  </li>
+
 
 </ul>
 
