flesh out project view

--- a/lib/temporary_hack_web/templates/layout/root.html.heex
+++ b/lib/temporary_hack_web/templates/layout/root.html.heex
@@ -10,13 +10,13 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <header>
+    <!--<header>
       <nav class="flex items-center justify-between flex-wrap bg-blue-100">
-        <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <div class="flex items-center flex-shrink-0 mr-6">
           <span class="font-semibold text-xl tracking-tight">Temporary Hack</span>
         </div>
       </nav>
-    </header>
+    </header>-->
     <%= @inner_content %>
   </body>
 </html>
