--- a/lib/temporary_hack_web/templates/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/project/index.html.heex
@@ -1,17 +1,20 @@
-<h1>Listing Projects</h1>
-
+<section class="flex flex-wrap mx-auto py-10 flex justify-center">
 <%= for project <- @projects do %>
-  <div class="max-w-sm rounded w-full shadow-lg">
-    <div class="font-bold text-xl mb-2"><%= link(project.repo, to: project.html_url)%></div>
+  <div class="max-w-sm rounded w-full shadow-lg bg-blue-200 m-2 p-2">
+    <div class="font-bold text-xl mb-2"><%= link(project.title, to: project.url)%></div>
     <p class="text-gray-700 text-base"><%= project.description %></p>
-    <%= if Map.has_key?(project, :hex) do %>
-      <div class="font-semibold text-l mb-2">Hex</div>
-      <div class="px-6 pt-4 pb-2"><%= project.hex.latest_version %></div>
-      <img src="https://img.shields.io/hexpm/l/logfmt_ex" />
+    <%= if !Enum.empty?(project.shields) do %>
+    <div class="pt-4">
+    <%= for {shield, link} <- project.shields do %>
+      <span class="inline-block"><%=shield |> img_tag() |> link(to: link) %></span>
+    <% end %>
+    </div>
     <% end %>
     <div class="px-6 pt-4 pb-2">
-      <span class="inline-blockf bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=project.language%></span>
-      <span class="inline-blockf bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=project.license%></span>
+    <%= for tag <- project.tags do %>
+      <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=tag%></span>
+    <% end %>
     </div>
   </div>
 <% end %>
+</section>
