--- a/lib/temporary_hack_web/templates/admin/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/admin/project/index.html.heex
@@ -1,18 +1,18 @@
-<h1>Listing Projects</h1>
-
-<table>
-  <thead>
+<div class="overflow-x-auto relative shadow-md">
+<table class="w-full text-left">
+  <thead class="bg-gray-50">
     <tr>
-      <th>User</th>
-      <th>Repo</th>
+      <th scope="col" class="py-3 px-6">User</th>
+      <th scope="col" class="py-3 px-6">Repo</th>
+      <th scope="col" class="py-3 px-6">Actions</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
 <%= for project <- @projects do %>
     <tr>
-      <td><%= project.user %></td>
-      <td><%= project.repo %></td>
+      <td class="py-4 px-6"><%= project.user %></td>
+      <td class="py-4 px-6"><%= project.repo %></td>
       <td>
         <span><%= link "Show", to: Routes.project_path(@conn, :show, project) %></span>
         <span><%= link "Edit", to: Routes.project_path(@conn, :edit, project) %></span>
@@ -23,4 +23,5 @@
   </tbody>
 </table>
 
-<span><%= link "New Project", to: Routes.project_path(@conn, :new) %></span>
+</div>
+<span class="m-4"><%= link "New Project", to: Routes.project_path(@conn, :new) %></span>
