--- a/lib/temporary_hack_web/templates/layout/root.html.heex
+++ b/lib/temporary_hack_web/templates/layout/root.html.heex
@@ -10,13 +10,11 @@
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <!--<header>
-      <nav class="flex items-center justify-between flex-wrap bg-blue-100">
-        <div class="flex items-center flex-shrink-0 mr-6">
-          <span class="font-semibold text-xl tracking-tight">Temporary Hack</span>
-        </div>
+    <header>
+      <nav>
+        <%= render "_user_menu.html", assigns %>
       </nav>
-    </header>-->
+    </header>
     <%= @inner_content %>
   </body>
 </html>
