--- a/lib/temporary_hack_web/templates/project/index.html.heex
+++ b/lib/temporary_hack_web/templates/project/index.html.heex
@@ -1,4 +1,4 @@
-<section class="flex flex-wrap mx-auto py-10 flex justify-center">
+<section class="flex flex-wrap mx-auto py-10 justify-center">
 <%= for project <- @projects do %>
   <div class="max-w-sm rounded w-full shadow-lg bg-blue-200 m-2 p-2">
     <div class="font-bold text-xl mb-2"><%= link(project.title, to: project.url)%></div>
