--- a/lib/temporary_hack_web/templates/page/index.html.heex
+++ b/lib/temporary_hack_web/templates/page/index.html.heex
@@ -1,18 +1,24 @@
 <section class="flex flex-wrap mx-auto py-10 flex justify-center">
   <div class="bg-blue-200 w-80 shadow-lg p-4 rounded-lg border border-gray-200 m-4">
-    <h2 class="text-2xl uppercase">Resources</h2>
+    <h2 class="text-2xl uppercase"><%= link "Blog", to: Routes.blog_path(@conn, :index) %></h2>
     <p>
-    A collection of personal projects with demos, links, and documentation.
+      Read about the stuff I do.
+    </p>
+  </div>
+  <div class="bg-blue-200 w-80 shadow-lg p-4 rounded-lg border border-gray-200 m-4">
+    <h2 class="text-2xl uppercase"><%= link "Projects", to: Routes.project_path(@conn, :index) %></h2>
+    <p>
+      Open source projects I contribute to.
     </p>
   </div>
   <div class="bg-blue-200 w-80 shadow-lg p-4 rounded-lg border border-gray-200 m-4">
     <h2 class="text-2xl uppercase">Elsewhere</h2>
     <ul>
       <li>
-        <a href="https://github.com/akasprzok">Github</a>
+        <%= link "Github", to: "https://github.com/akasprzok" %>
       </li>
       <li>
-        <a href="https://twitter.com/akasprzok">Twitter</a>
+        <%= link "Twitter", to: "https://twitter.com/akasprzok" %>
       </li>
     </ul>
   </div>
