--- a/lib/temporary_hack_web/templates/admin/project/new.html.heex
+++ b/lib/temporary_hack_web/templates/admin/project/new.html.heex
@@ -1,5 +1,5 @@
 <h1>New Project</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.project_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.admin_project_path(@conn, :create)) %>
 
-<span><%= link "Back", to: Routes.project_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.admin_project_path(@conn, :index) %></span>
