--- a/lib/temporary_hack_web/templates/admin/project/show.html.heex
+++ b/lib/temporary_hack_web/templates/admin/project/show.html.heex
@@ -14,5 +14,5 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.project_path(@conn, :edit, @project) %></span> |
-<span><%= link "Back", to: Routes.project_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.admin_project_path(@conn, :edit, @project) %></span> |
+<span><%= link "Back", to: Routes.admin_project_path(@conn, :index) %></span>
