--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,29 +2,13 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-code {
-  @apply p-1;
-}
-
-pre {
-  @apply m-2 py-2;
-}
-
-p {
-  @apply m-2;
-}
 
 a {
   @apply underline text-blue-600 hover:text-blue-800 visited:text-purple-600;
 }
 
-.makeup .hll {
-  background-color: #ffffcc
-}
-
-.makeup {
-  background-color: #f8f8f8
-}
+/*.makeup .hll {background-color: #ffffcc}
+.makeup {background-color: #f8f8f8} */
 
 .makeup .unselectable {
   -webkit-touch-callout: none;
@@ -35,401 +19,78 @@ a {
   user-select: none;
 }
 
-.makeup .hll {
-  background-color: #222222
-}
-
-.makeup {
-  background-color: #000000
-}
-
-.makeup .unselectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.makeup .hll {
-  background-color: #ffffcc
-}
-
-.makeup {
-  background-color: #f0f0f0
-}
-
-.makeup .unselectable {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Makeup.stylesheet(:friendly_style, "makeup") */
-.makeup .bp {
-  color: #007020;
-}
-
-/* :name_builtin_pseudo */
-.makeup .c {
-  color: #60a0b0;
-  font-style: italic;
-}
-
-/* :comment */
-.makeup .c1 {
-  color: #60a0b0;
-  font-style: italic;
-}
-
-/* :comment_single */
-.makeup .ch {
-  color: #60a0b0;
-  font-style: italic;
-}
-
-/* :comment_hashbang */
-.makeup .cm {
-  color: #60a0b0;
-  font-style: italic;
-}
-
-/* :comment_multiline */
-.makeup .cp {
-  color: #007020;
-  font-style: normal;
-}
-
-/* :comment_preproc */
-.makeup .cpf {
-  color: #007020;
-  font-style: normal;
-}
-
-/* :comment_preproc_file */
-.makeup .cs {
-  color: #60a0b0;
-  font-style: normal;
-  background-color: #fff0f0;
-}
-
-/* :comment_special */
-.makeup .dl {
-  color: #4070a0;
-}
-
-/* :string_delimiter */
-.makeup .err {
-  border: #FF0000;
-}
-
-/* :error */
-.makeup .fm {
-  color: #06287e;
-}
-
-/* :name_function_magic */
-.makeup .gd {
-  color: #A00000;
-}
-
-/* :generic_deleted */
-.makeup .ge {
-  font-style: italic;
-}
-
-/* :generic_emph */
-.makeup .gh {
-  color: #000080;
-  font-weight: bold;
-}
-
-/* :generic_heading */
-.makeup .gi {
-  color: #00A000;
-}
-
-/* :generic_inserted */
-.makeup .go {
-  color: #888;
-}
-
-/* :generic_output */
-.makeup .gp {
-  color: #c65d09;
-  font-weight: bold;
-}
-
-/* :generic_prompt */
-.makeup .gr {
-  color: #FF0000;
-}
-
-/* :generic_error */
-.makeup .gs {
-  font-weight: bold;
-}
-
-/* :generic_strong */
-.makeup .gt {
-  color: #04D;
-}
-
-/* :generic_traceback */
-.makeup .gu {
-  color: #800080;
-  font-weight: bold;
-}
-
-/* :generic_subheading */
-.makeup .il {
-  color: #40a070;
-}
-
-/* :number_integer_long */
-.makeup .k {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :keyword */
-.makeup .kc {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :keyword_constant */
-.makeup .kd {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :keyword_declaration */
-.makeup .kn {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :keyword_namespace */
-.makeup .kp {
-  color: #007020;
-  font-weight: normal;
-}
-
-/* :keyword_pseudo */
-.makeup .kr {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :keyword_reserved */
-.makeup .kt {
-  color: #902000;
-  font-weight: normal;
-}
-
-/* :keyword_type */
-.makeup .m {
-  color: #40a070;
-}
-
-/* :number */
-.makeup .mb {
-  color: #40a070;
-}
-
-/* :number_bin */
-.makeup .mf {
-  color: #40a070;
-}
-
-/* :number_float */
-.makeup .mh {
-  color: #40a070;
-}
-
-/* :number_hex */
-.makeup .mi {
-  color: #40a070;
-}
-
-/* :number_integer */
-.makeup .mo {
-  color: #40a070;
-}
-
-/* :number_oct */
-.makeup .na {
-  color: #4070a0;
-}
-
-/* :name_attribute */
-.makeup .nb {
-  color: #007020;
-}
-
-/* :name_builtin */
-.makeup .nc {
-  color: #0e84b5;
-  font-weight: bold;
-}
-
-/* :name_class */
-.makeup .nd {
-  color: #555555;
-  font-weight: bold;
-}
-
-/* :name_decorator */
-.makeup .ne {
-  color: #007020;
-}
-
-/* :name_exception */
-.makeup .nf {
-  color: #06287e;
-}
-
-/* :name_function */
-.makeup .ni {
-  color: #d55537;
-  font-weight: bold;
-}
-
-/* :name_entity */
-.makeup .nl {
-  color: #002070;
-  font-weight: bold;
-}
-
-/* :name_label */
-.makeup .nn {
-  color: #0e84b5;
-  font-weight: bold;
-}
-
-/* :name_namespace */
-.makeup .no {
-  color: #60add5;
-}
-
-/* :name_constant */
-.makeup .nt {
-  color: #062873;
-  font-weight: bold;
-}
-
-/* :name_tag */
-.makeup .nv {
-  color: #bb60d5;
-}
-
-/* :name_variable */
-.makeup .o {
-  color: #666666;
-}
-
-/* :operator */
-.makeup .ow {
-  color: #007020;
-  font-weight: bold;
-}
-
-/* :operator_word */
-.makeup .s {
-  color: #4070a0;
-}
-
-/* :string */
-.makeup .s1 {
-  color: #4070a0;
-}
-
-/* :string_single */
-.makeup .s2 {
-  color: #4070a0;
-}
-
-/* :string_double */
-.makeup .sa {
-  color: #4070a0;
-}
-
-/* :string_affix */
-.makeup .sb {
-  color: #4070a0;
-}
-
-/* :string_backtick */
-.makeup .sc {
-  color: #4070a0;
-}
-
-/* :string_char */
-.makeup .sd {
-  color: #4070a0;
-  font-style: italic;
-}
-
-/* :string_doc */
-.makeup .se {
-  color: #4070a0;
-  font-weight: bold;
-}
-
-/* :string_escape */
-.makeup .sh {
-  color: #4070a0;
-}
-
-/* :string_heredoc */
-.makeup .si {
-  color: #70a0d0;
-  font-style: italic;
-}
-
-/* :string_interpol */
-.makeup .sr {
-  color: #235388;
-}
-
-/* :string_regex */
-.makeup .ss {
-  color: #517918;
-}
-
-/* :string_symbol */
-.makeup .sx {
-  color: #4070a0;
-}
-
-/* :string_sigil */
-.makeup .sx {
-  color: #c65d09;
-}
-
-/* :string_other */
-.makeup .vc {
-  color: #bb60d5;
-}
-
-/* :name_variable_class */
-.makeup .vg {
-  color: #bb60d5;
-}
-
-/* :name_variable_global */
-.makeup .vi {
-  color: #bb60d5;
-}
-
-/* :name_variable_instance */
-.makeup .vm {
-  color: #bb60d5;
-}
-
-/* :name_variable_magic */
+.makeup .bp {color: #3465a4; } /* :name_builtin_pseudo */
+.makeup .c {color: #8f5902; font-style: italic; } /* :comment */
+.makeup .c1 {color: #8f5902; font-style: italic; } /* :comment_single */
+.makeup .ch {color: #8f5902; font-style: italic; } /* :comment_hashbang */
+.makeup .cm {color: #8f5902; font-style: italic; } /* :comment_multiline */
+.makeup .cp {color: #8f5902; font-style: italic; } /* :comment_preproc */
+.makeup .cpf {color: #8f5902; font-style: italic; } /* :comment_preproc_file */
+.makeup .cs {color: #8f5902; font-style: italic; } /* :comment_special */
+.makeup .dl {color: #4e9a06; } /* :string_delimiter */
+.makeup .err {color: #a40000; border: #ef2929; } /* :error */
+.makeup .fm {color: #ffffcc; } /* :name_function_magic */
+.makeup .g {color: #ffffcc; } /* :generic */
+.makeup .gd {color: #a40000; } /* :generic_deleted */
+.makeup .ge {color: #ffffcc; font-style: italic; } /* :generic_emph */
+.makeup .gh {color: #000080; font-weight: bold; } /* :generic_heading */
+.makeup .gi {color: #00A000; } /* :generic_inserted */
+.makeup .go {color: #ffffcc; font-style: italic; } /* :generic_output */ 
+.makeup .gp {color: #8f5902; } /* :generic_prompt */
+.makeup .gr {color: #ef2929; } /* :generic_error */
+.makeup .gs {color: #ffffcc; font-weight: bold; } /* :generic_strong */
+.makeup .gt {color: #a40000; font-weight: bold; } /* :generic_traceback */
+.makeup .gu {color: #800080; font-weight: bold; } /* :generic_subheading */
+.makeup .il {color: #0000cf; font-weight: bold; } /* :number_integer_long */
+.makeup .k {color: #204a87; font-weight: bold; } /* :keyword */
+.makeup .kc {color: #204a87; font-weight: bold; } /* :keyword_constant */
+.makeup .kd {color: #204a87; font-weight: bold; } /* :keyword_declaration */
+.makeup .kn {color: #204a87; font-weight: bold; } /* :keyword_namespace */
+.makeup .kp {color: #204a87; font-weight: bold; } /* :keyword_pseudo */
+.makeup .kr {color: #204a87; font-weight: bold; } /* :keyword_reserved */
+.makeup .kt {color: #204a87; font-weight: bold; } /* :keyword_type */
+.makeup .l {color: #ffffcc; } /* :literal */
+.makeup .ld {color: #ffffcc; } /* :literal_date */
+.makeup .m {color: #0000cf; font-weight: bold; } /* :number */
+.makeup .mb {color: #0000cf; font-weight: bold; } /* :number_bin */ 
+.makeup .mf {color: #0000cf; font-weight: bold; } /* :number_float */
+.makeup .mh {color: #0000cf; font-weight: bold; } /* :number_hex */
+.makeup .mi {color: #0000cf; font-weight: bold; } /* :number_integer */
+.makeup .mo {color: #0000cf; font-weight: bold; } /* :number_oct */
+.makeup .n {color: #ffffcc; } /* :name */
+.makeup .na {color: #c4a000; } /* :name_attribute */
+.makeup .nb {color: #204a87; } /* :name_builtin */
+.makeup .nc {color: #ffffcc; } /* :name_class */
+.makeup .nd {color: #5c35cc; font-weight: bold; } /* :name_decorator */
+.makeup .ne {color: #cc0000; font-weight: bold; } /* :name_exception */
+.makeup .nf {color: #ffffcc; } /* :name_function */
+.makeup .ni {color: #ce5c00; } /* :name_entity */
+.makeup .nl {color: #f57900; } /* :name_label */
+.makeup .nn {color: #ffffcc; } /* :name_namespace */
+.makeup .no {color: #ffffcc; } /* :name_constant */
+.makeup .nt {color: #204a87; font-weight: bold; } /* :name_tag */
+.makeup .nv {color: #ffffcc; } /* :name_variable */
+.makeup .nx {color: #ffffcc; } /* :name_other */
+.makeup .o {color: #ce5c00; font-weight: bold; } /* :operator */
+.makeup .ow {color: #204a87; font-weight: bold; } /* :operator_word */
+.makeup .p {color: #ffffcc; font-weight: bold; } /* :punctuation */
+.makeup .py {color: #ffffcc; } /* :name_property */
+.makeup .s {color: #4e9a06; } /* :string */
+.makeup .s1 {color: #4e9a06; } /* :string_single */
+.makeup .s2 {color: #4e9a06; } /* :string_double */
+.makeup .sa {color: #4e9a06; } /* :string_affix */
+.makeup .sb {color: #4e9a06; } /* :string_backtick */
+.makeup .sc {color: #4e9a06; } /* :string_char */
+.makeup .sd {color: #8f5902; font-style: italic; } /* :string_doc */
+.makeup .se {color: #4e9a06; } /* :string_escape */
+.makeup .sh {color: #4e9a06; } /* :string_heredoc */
+.makeup .si {color: #4e9a06; } /* :string_interpol */
+.makeup .sr {color: #4e9a06; } /* :string_regex */
+.makeup .ss {color: #4e9a06; } /* :string_symbol */
+.makeup .sx {color: #4e9a06; } /* :string_other */
+.makeup .sx {color: #4e9a06; } /* :string_sigil */
+.makeup .vc {color: #ffffcc; } /* :name_variable_class */
+.makeup .vg {color: #ffffcc; } /* :name_variable_global */
+.makeup .vi {color: #ffffcc; } /* :name_variable_instance */
+.makeup .vm {color: #ffffcc; } /* :name_variable_magic */
+.makeup .x {color: #ffffcc; } /* :other */
