--- a/lib/temporary_hack_web/templates/blog/show.html.eex
+++ b/lib/temporary_hack_web/templates/blog/show.html.eex
@@ -1,4 +1,5 @@
 
+<article>
 <div class="rounded w-full shadow-lg bg-blue-200 m-4 p-4 justify-center">
 <div class="flex justify-between">
 <h1 class="flex justify-start font-bold text-xl mb-2"><%= @post.title %></h1>
@@ -12,8 +13,11 @@
   <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=tag%></span>
 <% end %>
 </div>
+<div class="prose prose-pre:bg-slate">
 <%= raw @post.body %>
+</div>
 <div class="m-4">
 <%= link "← Take me back", to: Routes.blog_path(@conn, :index) %>
 </div>
 </div>
+</article>
