--- a/lib/temporary_hack_web/live/page/index.html.heex
+++ b/lib/temporary_hack_web/live/page/index.html.heex
@@ -6,7 +6,7 @@
       <img class="rounded-full" src="/images/andreas_green_mustache.jpeg">
     </div>
     <div class="w-full md:w-auto mt-4 md:bg-none pb-6">
-      <h1 class="text-xl">Hi, I'm Andreas Kasprzok</h1>
+      <h1 class="text-xl text-center">Hi, I'm Andreas Kasprzok</h1>
       <ul class="pt-2 grid grid-cols-2 md:grid-cols-1 grid-rows-2 md:grid-rows-4 grid-flow-col gap-2 text-md mt-2">
         <li>I am <span class="font-medium font-sans">looking for work</span></li>
         <li>I live in <span class="font-medium font-sans">Seattle</span></li>
