--- a/lib/temporary_hack_web/live/page/index.html.heex
+++ b/lib/temporary_hack_web/live/page/index.html.heex
@@ -1,6 +1,6 @@
 
 <div class="relative md:grid grid-cols-[20rem,_1fr] max-w-7xl mx-auto">
-  <div class="top-0 flex flex-wrap md:flex-col justify-between md:justify-start items-center gap-2 px-4 pt-4">
+  <section class="top-0 flex flex-wrap md:flex-col justify-between md:justify-start items-center gap-2 px-4 pt-4">
     <h2 class="text-2xl uppercase">Temporary Hack</h2>
     <div class="w-80 md:h-64 md:w-64 mx-auto max-w-full">
       <img class="rounded-full" src="/images/andreas_green_mustache.jpeg">
@@ -24,7 +24,7 @@
 
       </ul>
     </div>
-  </div>
+  </section>
   <div class="font-sans relative px-2 md:px-0 max-h-[90vh] md:overflow-auto">
     <h2 class="text-2xl uppercase"><%= link "Blog", to: Routes.blog_path(@socket, :index) %></h2>
     <p>
