--- a/lib/temporary_hack_web/templates/blog/show.html.eex
+++ b/lib/temporary_hack_web/templates/blog/show.html.eex
@@ -1,8 +1,7 @@
 
-<article>
-<div class="rounded w-full shadow-lg bg-blue-200 m-4 p-4 justify-center">
+<article class="rounded shadow-lg m-4 p-4 justify-center">
 <div class="flex justify-between">
-<h1 class="flex justify-start font-bold text-xl mb-2"><%= @post.title %></h1>
+<h1 class="flex justify-start font-bold text-2xl mb-2"><%= @post.title %></h1>
 
 <p class="flex justify-end text-gray-700">
   <time><%= @post.date %></time>
@@ -18,6 +17,5 @@
 </div>
 <div class="m-4">
 <%= link "← Take me back", to: Routes.blog_path(@conn, :index) %>
-</div>
 </div>
 </article>
