--- a/lib/temporary_hack_web/templates/blog/show.html.eex
+++ b/lib/temporary_hack_web/templates/blog/show.html.eex
@@ -1,12 +1,10 @@
 
-<article class="rounded shadow-lg m-4 p-4 justify-center">
-<div class="flex justify-between">
-<h1 class="flex justify-start font-bold text-2xl mb-2"><%= @post.title %></h1>
-
-<p class="flex justify-end text-gray-700">
+<article class="mx-auto rounded shadow-lg m-4 p-4 justify-center">
+<p class="text-gray-700">
   <time><%= @post.date %></time>
 </p>
-</div>
+<h1 class="font-bold text-2xl mb-2"><%= @post.title %></h1>
+
 <div class="px-6 pt-4 pb-2">
 <%= for tag <- @post.tags do %>
   <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"><%=tag%></span>
